--- a/blocks/profile.css
+++ b/blocks/profile.css
@@ -1,28 +1,27 @@
 .profile {
   display: flex;
-  max-width: 880px;
-  margin: auto;
+  align-items: center;
+  padding-top: 40px;
+  padding-bottom: 47px;
 }
 
 .profile__info {
   display: grid;
-  grid-template-areas:
-    "title button"
-    "description description";
+  align-items: baseline;
+  grid-template-areas: "title button" "description description";
   grid-template-columns: minmax(auto, 373px) auto;
+  grid-gap: 7px 18px;
 }
-
 .profile__edit-button {
   background: transparent url(../images/edit-icon.svg) center no-repeat;
   height: 24px;
   width: 24px;
   grid-area: button;
-  box-sizing: border-box;
-  border: 1px solid #ffffff;
-  margin-left: 18px;
+  border: solid 1px white;
+  align-self: center;
+  padding: 0;
+  margin: 0;
   cursor: pointer;
-  background-size: 10px;
-  margin-top: 77px;
 }
 
 .profile__edit-button:hover {
@@ -31,16 +30,16 @@
 
 .profile__add-button {
   background: transparent url(../images/add-icon.svg) center no-repeat;
-  height: 50px;
   width: 150px;
+  height: 50px;
+  padding: 14px 64px;
   margin-left: auto;
-  box-sizing: border-box;
-  border: 2px solid #ffffff;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  border: solid 2px white;
   border-radius: 2px;
   cursor: pointer;
-  background-size: 22px;
-  margin-bottom: 86px;
-  margin-top: 75px;
 }
 
 .profile__add-button:hover {
@@ -48,162 +47,120 @@
 }
 
 .profile__title {
-  grid-area: title;
-  margin: 0;
-  font-family: "Inter", Arial, sans-serif;
+  color: #ffffff;
+  font-family: "Inter", sans-serif;
   font-style: normal;
-  font-weight: 500;
   font-size: 42px;
   line-height: 48px;
+  font-weight: 500;
+  grid-area: title;
+  max-width: 373px;
+  margin: 0;
+  text-overflow: ellipsis;
   white-space: nowrap;
   overflow: hidden;
-  text-overflow: ellipsis;
-  max-width: 373px;
-  margin-top: 62px;
 }
 
 .profile__description {
+  font-family: "Inter", sans-serif;
+  font-style: normal;
   font-size: 18px;
   line-height: 22px;
   font-weight: 400;
   grid-area: description;
   margin: 0;
-  font-family: "Inter", Arial, sans-serif;
-  font-style: normal;
-  padding-top: 16px;
+  max-width: 373px;
+  text-overflow: ellipsis;
   white-space: nowrap;
   overflow: hidden;
-  text-overflow: ellipsis;
-  max-width: 415px;
-  margin-bottom: 72px;
 }
 
 .profile__image {
   height: 120px;
   width: 120px;
   border-radius: 50%;
+  object-fit: cover;
   background-position: center;
   margin-right: 24px;
-  margin-bottom: 47.25px;
-  margin-top: 36.25px;
 }
 
-@media screen and (max-width: 800px) {
-  .profile__add-button {
-    max-width: 50px;
-    margin: auto;
-  }
-}
-
-@media screen and (max-width: 770px) {
+@media screen and (max-width: 621px) {
   .profile {
+    padding: 0;
+    margin: 42px 0 36px;
     flex-direction: column;
-    align-items: center;
-    margin-bottom: 40px;
+    text-align: center;
   }
 
   .profile__info {
-    grid-template-columns: minmax(auto, 340px) auto;
+    justify-content: center;
+    width: 100%;
+    max-width: 282px;
+    margin: 27px auto 36px;
+    gap: 14px 10px;
   }
 
-  .profile__add-button {
-    max-width: 581px;
+  .profile__title {
+    font-size: 22px;
+    line-height: 27px;
+    width: 222px;
   }
-
-  .profile__edit-button {
-    margin-top: 9px;
+  .profile__description {
+    width: 100%;
+    max-width: 282px;
+    font-size: 14px;
+    line-height: 17px;
   }
 
   .profile__image {
     margin-right: 0;
   }
 
-  .profile__title {
-    font-size: 32px;
-    line-height: 38px;
-    max-width: 340px;
-    text-align: center;
-    margin-left: auto;
-    grid-area: title;
-    margin-top: 0;
-  }
-
-  .profile__description {
-    text-align: center;
-    padding-bottom: 36px;
-    margin-bottom: 0;
-  }
-}
-
-@media screen and (max-width: 618px) {
-  .profile__title {
-    font-size: 22px;
-    line-height: 27px;
-  }
-
-  .profile__info {
-    grid-template-columns: minmax(auto, 196px) auto;
-  }
-
-  .profile__description {
-    font-size: 14px;
-    line-height: 17px;
-  }
-
-  .profile__edit-button {
-    margin-top: 0px;
-  }
-
   .profile__add-button {
-    width: 282px;
+    width: 100%;
+    max-width: 282px;
+    margin: 0 auto;
+  }
+  .profile__edit-button {
+    width: 18px;
+    height: 18px;
+    background-size: 8px 8px;
   }
 }
 
 @media screen and (max-width: 480px) {
   .profile {
-    max-width: 282px;
+    flex-direction: column;
+    margin-bottom: 36px;
+    text-align: center;
   }
 
   .profile__info {
-    grid-template-columns: minmax(auto, 282px) auto;
-  }
-
-  .profile__description {
-    max-width: 282px;
-    padding: 0;
-    margin-top: 14px;
-    margin-left: auto;
-    margin-right: auto;
-    padding-bottom: 0;
-  }
-
-  .profile__add-button {
-    margin: 0;
-    padding: 0;
-    margin-top: 36px;
-    margin-bottom: 0;
-    background-size: 16px;
-  }
-
-  .profile__edit-button {
-    height: 18px;
-    width: 18px;
-    margin-left: 10px;
-    margin-right: 34px;
-    margin-top: 4px;
-    background-size: 7.5px;
+    display: flex;
+    width: 100%;
+    flex-wrap: wrap;
+    justify-content: center;
+    margin: 29px 0 33px 0;
   }
 
   .profile__image {
-    margin-bottom: 26.25px;
-    margin-top: 38.25px;
+    margin-top: 0;
+  }
+
+  .profile__description {
+    width: 100%;
+    text-align: center;
   }
 
   .profile__title {
-    margin-left: 62px;
-    line-height: 27px;
     text-align: center;
-    min-width: 196px;
-    max-width: 230px;
+    width: 196px;
+    line-height: 27px;
+    font-size: 22px;
+  }
+
+  .profile__add-button {
+    width: 282px;
+    padding: 19px 19px 19px;
   }
 }
