--- a/src/blocks/profile.css
+++ b/src/blocks/profile.css
@@ -1,127 +1,167 @@
 .profile {
   display: flex;
   align-items: center;
-  padding-top: 40px;
+  margin-bottom: 51px;
+  margin-top: 40px;
+}
+
+.profile__avatar {
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	/* height: 120px;
+	width: 120px; */
+	/* border-radius: 50%; */
+	object-fit: cover;
+	background-position: center;
+	
+}
+
+.profile__avatar-button {
+  background: transparent url(../images/edit-avatar-icon.svg) no-repeat center;
+  position: absolute;
+  width: 120px;
+  height: 120px;
+  margin-right: 30px;
+  border: 1px solid white;
+  border-radius: 50%;
+  visibility: hidden;
+  z-index: 1;
+}
+
+.profile__image {
+	height: 120px;
+	width: 120px;
+	border-radius: 50%;
+	object-fit: cover;
+	background-position: center;
+	margin-right: 30px;
+	z-index: -1;
+}
+
+.profile__avatar .profile__image,
+.profile__avatar .profile__avatar-button {
+  transition: visibility 0.15s, opacity 0.2s ease-in-out;
+}
+
+.profile__avatar:hover .profile__avatar-button {
+  cursor: pointer;
+  visibility: visible;
+}
+
+.profile__avatar:hover .profile__image {
+  cursor: pointer;
+  opacity: 0.2;
 }
 
 .profile__info {
   display: grid;
-  grid-template-areas:
-    "title button"
-    "description description";
+  grid-template-areas: "title button" "description description";
   grid-template-columns: minmax(auto, 373px) auto;
-  gap: 9px 17px;
-}
-
-.profile__pencil-button {
-  background: transparent url(../images/pencil.svg) center no-repeat;
-  width: 24px;
-  height: 24px;
-  grid-area: button;
-  border: 1px solid white;
-  cursor: pointer;
-}
-
-.profile__pencil-button:hover {
-  opacity: 0.6;
-}
-
-.profile__add-button {
-  background: transparent url(../images/plus\ sign.svg) center no-repeat;
-  width: 150px;
-  height: 50px;
-  margin-left: auto;
-  border: 2px solid white;
-  border-radius: 2px;
-  cursor: pointer;
-}
-.profile__add-button:hover {
-  opacity: 0.6;
+  align-items: center;
 }
 
 .profile__title {
-  font-family: "Inter", sans-serif;
   font-size: 42px;
   line-height: 48px;
   font-weight: 500;
   grid-area: title;
-  margin: 0;
+  margin: 0 0 16px;
   text-overflow: ellipsis;
   white-space: nowrap;
   overflow: hidden;
+}
+
+.profile__edit-button {
+  background: transparent url(../images/edit-button.svg) center no-repeat;
+  height: 24px;
+  width: 24px;
+  grid-template-areas: "button";
+  border: 1px solid white;
+  margin-left: 18px;
+  margin-bottom: 10px;
+  cursor: pointer;
+}
+
+.profile__edit-button:hover {
+  opacity: 0.6;
 }
 
 .profile__description {
-  font-family: "Inter", sans-serif;
   font-size: 18px;
   line-height: 22px;
-  font-weight: 400;
-  grid-area: description;
+  grid-template-areas: "description";
   margin: 0;
-  box-sizing: border-box;
   text-overflow: ellipsis;
   white-space: nowrap;
   overflow: hidden;
 }
-.profile__pic {
-  height: 120px;
-  width: 120px;
-  border-radius: 50%;
-  object-fit: cover;
-  background-position: center;
-  margin-right: 24px;
+
+.profile__add-button {
+  background: transparent url(../images/add-button.svg) center no-repeat;
+  height: 50px;
+  width: 150px;
+  margin-left: auto;
+  border: 2px solid #ffffff;
+  cursor: pointer;
+  border-radius: 2px;
 }
 
-@media screen and (max-width: 544px) {
+.profile__add-button:hover {
+  opacity: 0.6;
+}
+
+@media screen and (min-width: 320px) and (max-width: 760px) {
   .profile {
     flex-direction: column;
+    width: 100%;
     margin: 0;
-    padding-top: 0;
   }
-  .profile__pic {
-    display: flex;
-    margin: 38.25px auto 0;
+
+  .profile__avatar-button {
+	margin: 42px 0 0;
+  }
+
+  .profile__image {
+    margin: 42px 0 0;
+  }
+
+  .profile__title {
+    font-size: 22px;
+    margin-top: 30px;
+    margin-bottom: 14px;
+    line-height: 27px;
+    max-width: 196px;
   }
   .profile__info {
-    grid-template-areas:
-      "title button"
-      "description description";
-    column-gap: 10px;
-    row-gap: 14px;
-    box-sizing: border-box;
-    grid-template-columns: minmax(auto, 196px) 18px;
-    place-items: center;
-    padding-top: 30px;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    max-width: 282px;
   }
-  .profile__title {
-    grid-area: title;
-    font-size: 22px;
-    align-items: center;
-    display: block;
-    text-align: center;
-    line-height: 26.63px;
-    max-width: 100%;
-  }
-  .profile__pencil-button {
-    grid-area: button;
+
+  .profile__edit-button {
     height: 18px;
     width: 18px;
+    margin-top: 15px;
+    margin-bottom: 0;
+    background-size: 7px 7px;
   }
+
   .profile__description {
-    grid-area: description;
-    font-size: 14px;
-    align-items: center;
-    display: block;
+    width: 100%;
     text-align: center;
-    line-height: 16.94px;
-    max-width: 100%;
+    font-size: 14px;
+    line-height: 17px;
   }
+
   .profile__add-button {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    margin: 0;
-    width: 282px;
     margin-top: 36px;
+    margin-bottom: 36px;
+    width: 282px;
+    padding: 0;
+    margin-right: 19px;
+    margin-left: 19px;
+    background-size: 16px 16px;
   }
 }
