--- a/src/blocks/page.css
+++ b/src/blocks/page.css
@@ -1,27 +1,27 @@
 .page {
-  background-color: black;
-  color: white;
-}
-
-.page__content {
-  display: flex;
-  flex-direction: column;
-  min-height: 100vh;
-  margin: 0 auto;
+	/* position: relative; */
+	background-color: black;
+	color: white;
+	font-family: "Inter", Arial, sans-serif;
 }
 
 .page__section {
-  max-width: 880px;
-  width: 100%;
-  position: relative;
-  margin: 0 auto;
+	max-width: 880px;
+	width: 100%;
+	position: relative;
+	margin: 0 auto;
 }
 
-@media screen and (max-width: 544px) {
-  .page__section {
-    max-width: 768px;
-    padding-left: 19px;
-    padding-right: 19px;
-    box-sizing: border-box;
-  }
+.page__content {
+	display: flex;
+	flex-direction: column;
+	min-height: 100vh;
+}
+
+/* @media screen and (min-width: 320px) and (max-width: 760px) and (min-width: 760px) and (max-width: 1100px)  */
+
+@media screen and (max-width: 920px) {
+	.page__section {
+		width: calc(100% - 38px);
+	}
 }
