--- a/src/blocks/modal.css
+++ b/src/blocks/modal.css
@@ -1,183 +1,235 @@
-.popup {
+.modal {
+  display: flex;
+  visibility: hidden;
   position: fixed;
   top: 0;
   right: 0;
-  left: 0;
   bottom: 0;
-  display: flex;
-  align-items: center;
-  justify-content: center;
+  left: 0;
+  padding: 0 19px;
+  opacity: 0;
+  transition: visibility 0.5s, opacity 0.5s linear;
   z-index: 999;
   background-color: rgba(0, 0, 0, 0.5);
-  padding: 0 19px;
-  visibility: hidden;
-  opacity: 0;
-  transition: visibility 0s 0.6s, opacity 0.6s linear;
 }
 
-.popup_opened {
+.modal_opened {
   visibility: visible;
   opacity: 1;
-  transition: visibility 0s, opacity 0.6s linear;
 }
 
-.popup__container {
-  background-color: #fff;
-  padding: 36px;
-  border-radius: 10px;
+.modal__container {
+  height: 330px;
+  width: 430px;
+  margin: auto auto;
+  padding: 34px 36px 36px;
   position: relative;
-  width: 358px;
-  max-width: 100%;
+  border-radius: 10px;
+  box-shadow: 0 0 0 25px rgba(0, 0, 0, 0.15);
+  background-color: #fff;
 }
 
-.popup__close-button {
-  background-image: url(../images/Close-icon.svg);
-  border: none;
-  background-color: transparent;
-  width: 40px;
-  height: 40px;
-  background-size: contain;
-  background-repeat: no-repeat;
+.modal__container_confirm {
+  max-height: 181px;
+}
+
+.modal__container_avatar {
+  max-height: 272px;
+}
+
+.modal__close {
+  background-image: url("../images/close-button.svg");
   position: absolute;
   bottom: calc(100% + 5px);
   left: calc(100% + 5px);
+  border: none;
+  width: 40px;
+  height: 40px;
+  cursor: pointer;
+  background-repeat: no-repeat;
+  background-size: contain;
+  background-color: transparent;
 }
 
-.popup__close-button:hover {
-  color: #fff;
+.modal__close:hover {
   opacity: 0.6;
+  transition: 0.5s ease-in;
   cursor: pointer;
 }
 
-.popup__heading {
-  color: #000;
-  font-family: "Inter", Arial, sans-serif;
+.modal__heading {
+  font-family: "Inter";
+  font-style: normal;
   font-weight: 900;
   font-size: 24px;
   line-height: 29px;
-  max-width: 330px;
-  width: 100%;
-  max-height: 23px;
-  height: 100%;
-  margin-bottom: 0;
-  margin-top: 0;
-  padding-bottom: 54px;
+  color: #000;
 }
 
-.popup__form {
+.modal__form {
   display: flex;
   flex-direction: column;
-  width: 358px;
 }
 
-.popup__input::placeholder {
-  color: #c4c4c4;
+.modal__label {
+  position: relative;
 }
 
-.popup__input {
-  font-family: "Inter", Arial, sans-serif;
-  font-size: 14px;
+.modal__form-input {
+	height: 50px;
+	border-top: 1px;
+	border-right: 1px;
+	border-left: 1px;
+	border-color: rgba(0, 0, 0, 0.2);
+	margin-bottom: 30px;
+	padding: 0;
+	width: 100%;
+}
+
+.modal__input_type_error {
+	border-bottom: solid 1px #ff0000;
+}
+
+.modal__error {
   font-weight: 400;
-  line-height: 17px;
-  border: none;
-  padding-bottom: 13px;
-  margin-top: 13px;
-  border-bottom: 1px solid rgba(0, 0, 0, 0.2);
-  width: 100%;
+  font-size: 12px;
+  line-height: 1.2;
+  color: #ff0000;
+  margin-top: 5px;
+  margin-bottom: 13px;
+  position: absolute;
+  top: 50px;
+  left: 0;
 }
 
-.popup__save-button {
-  width: 100%;
-  height: 50px;
-  background-color: #000;
-  color: #fff;
-  font-family: "Inter";
-  font-weight: 400;
-  font-size: 18px;
-  line-height: 22px;
-  align-content: center;
-  border: none;
-  margin-top: 18px;
-  padding: 0;
+.modal__error-visible {
+  display:block;
 }
 
-.popup__save-button:hover:not(:disabled) {
+.modal__form-input::placeholder {
+	font-weight: 400;
+	font-size: 14px;
+	line-height: 17px;
+	color: #c4c4c4;
+}
+
+.modal__button {
+	height: 50px;
+	line-height: 22px;
+	font-size: 18px;
+	font-weight: 400;
+	background-color: #000;
+	color: #fff;
+	margin-top: 18px;
+	padding: 0;
+	cursor: pointer;
+}
+
+.modal__button_disabled {
+  background-color: gray;
+  cursor: not-allowed;
+}
+
+.modal__button:hover {
+  opacity: 0.6;
+  transition: 0.5s ease-in;
+  cursor: pointer;
+}
+
+.modal__button_disabled:hover { 
+  opacity: 1;
+  cursor: default;
+}
+
+.modal__button:hover:not(:disabled) {
   opacity: 0.8;
   cursor: pointer;
 }
-.popup__save-button_disabled:hover {
-  opacity: 0.2;
-  cursor: default;
-}
-.popup__save-button_disabled {
-  border-radius: 2px;
-  border: 1px solid rgba(0, 0, 0, 0.2);
-  background-color: white;
-  color: #000;
-  opacity: 0.2;
+
+.modal__container-preview {
+  position: relative;
+  height: 100%;
+  margin: auto auto;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
 
-.popup__input_type_error {
-  visibility: visible;
-  border-bottom: 1px solid #ff0000;
+.modal__close_preview {
+  top: -40px;
+  right: -40px;
+  margin: 0;
+  padding: 0;
 }
 
-.popup__error_visible {
-  font-family: "Inter", Arial, sans-serif;
-  font-size: 12px;
-  line-height: 14.52px;
+.modal__preview {
+  position: relative;
+  max-width: 80%;
+}
+
+.modal__image {
+  max-width: 100%;
+  max-height: 540px;
+}
+
+.modal__caption {
+  background-color: transparent;
+  margin-top: 12px;
+  font-family: "Inter", sans-serif;
+  font-style: normal;
   font-weight: 400;
-  color: red;
-  padding-top: 5px;
+  font-size: 12px;
+  line-height: 15px;
 }
 
-@media screen and (max-width: 880px) {
-  .popup {
-    top: 123px;
-  }
-
-  .popup__container {
-    margin: 0;
-    max-height: 322px;
-    max-width: 282px;
-    box-sizing: border-box;
-    padding: 0;
-  }
-  .popup__heading {
+@media screen and (min-width: 380px) and (max-width: 630px) {
+  .modal__heading {
     font-size: 18px;
     line-height: 22px;
-    margin: 25px 0 0;
-    padding: 0 22px 76px;
-    max-width: 238px;
   }
-  .popup__form {
-    padding: 0 22px 0;
-    width: 238px;
-  }
-  .popup__input_type_title {
-    margin-top: 0;
-    max-width: 100%;
-  }
-  .popup__close-button {
+  .modal__close {
     width: 26px;
     height: 26px;
-    left: calc(100% + 3px);
-    bottom: calc(100% + 3px);
+    left: calc(100% - 30px);
+    margin-bottom: 13px;
   }
 
-  .popup__input_type_description {
-    margin-top: 0;
-    padding-top: 30px;
-    padding-bottom: 13px;
-    margin-bottom: 45px;
-    margin-bottom: 0;
+  .modal__button {
+    font-size: 14px;
+    line-height: 17px;
+  }
+}
+
+@media screen and (min-width: 320px) and (max-width: 660px) {
+  .modal__heading {
+    font-size: 18px;
+    line-height: 22px;
+  }
+
+  .modal__close {
+    width: 26px;
+    height: 26px;
+    left: calc(100% - 30px);
+    margin-bottom: 13px;
+  }
+
+  .modal__button {
+    font-size: 14px;
+    line-height: 17px;
+  }
+}
+
+@media screen and (min-width: 320px) and (max-width: 660px) {
+  .modal__container {
+    top: 136px;
+    max-height: 300px;
     max-width: 100%;
   }
-  .popup__save-button {
-    height: 46px;
-    margin-bottom: 25px;
-    font-size: 14px;
-    margin-top: 16px;
-    padding: 0;
+}
+
+@media screen and (min-width: 660px) and (max-width: 880px) {
+  .modal__container {
+    max-height: 300px;
+    max-width: 100%;
   }
 }
