--- a/src/blocks/header.css
+++ b/src/blocks/header.css
@@ -1,22 +1,30 @@
 .header {
-  margin-top: 45px;
-  border-bottom: 1px solid rgba(84, 84, 84, 0.7);
+	padding-top: 45px;
+	border-bottom: 1px solid rgba(84, 84, 84, 0.7);
+	padding-bottom: 41px;
+	max-width: 880px;
+	width: 100%;
+	position: relative;
+	margin: 0 auto;
+	box-sizing: border-box;
 }
 
 .header__image {
-  padding-bottom: 41px;
+	width: 173px;
+	height: 33px;
 }
 
-@media screen and (max-width: 544px) {
-  .header {
-    margin-top: 28px;
-    height: 56px;
-    padding: 0;
-  }
+/* @media screen and (min-width: 320px) and (max-width: 760px) and (min-width: 760px) and (max-width: 1100px) */
 
-  .header__image {
-    height: 24px;
-    width: 126px;
-    margin-left: 27px;
-  }
+@media screen and (max-width: 920px) {
+	.header {
+		padding-top: 28px;
+		padding-left: 27px;
+		padding-bottom: 32px;
+	}
+
+	.header__image {
+		width: 126px;
+		height: 24px;
+	}
 }
