--- a/src/blocks/footer.css
+++ b/src/blocks/footer.css
@@ -1,26 +1,24 @@
 .footer {
-  max-width: 880px;
-  padding-top: 67px;
-  padding-bottom: 60px;
-}
-.footer__copyright {
-  font-family: "inter", sans-serif;
-  font-weight: 400;
-  font-size: 18px;
-  line-height: 21.78px;
-  color: #545454;
-  margin: 0;
+	padding-bottom: 60px;
+	padding-top: 67px;
 }
 
-@media screen and (max-width: 544px) {
-  .footer {
-    max-width: 282px;
-    padding-top: 48px;
-    padding-bottom: 36px;
-    margin: 0;
-  }
-  .footer__copyright {
-    font-size: 14px;
-    line-height: 17px;
-  }
+.footer__copyright {
+	color: #545454;
+	font-size: 18px;
+	font-weight: 400;
+	line-height: 22px;
+	margin: 0;
+}
+
+@media screen and (min-width: 320px) and (max-width: 760px) {
+	.footer {
+		padding-top: 48px;
+		padding-bottom: 36px;
+	}
+
+	.footer__copyright {
+		font-size: 14px;
+		line-height: 17px;
+	}
 }
