--- a/src/blocks/cards.css
+++ b/src/blocks/cards.css
@@ -3,6 +3,30 @@
 	justify-content: center;
 	grid-template-columns: repeat(auto-fit, 282px);
 	grid-gap: 20px 17px;
+	list-style: none;
 	padding: 0;
 	margin: 0;
-}
+  }
+  
+  .cards {
+	margin-top: 30px;
+  }
+  
+  @media screen and (min-width: 1280px) {
+	.cards__list {
+	  grid-template-columns: repeat(3, 282px);
+	}
+  }
+  
+  @media screen and (min-width: 768px) and (max-width: 1279px) {
+	.cards__list {
+	  grid-template-columns: repeat(2, 282px);
+	}
+  }
+  
+  @media screen and (min-width: 320px) and (max-width: 767px) {
+	.cards__list {
+	  grid-template-columns: repeat(1, 282px);
+	}
+  }
+  
