--- a/src/blocks/header.css
+++ b/src/blocks/header.css
@@ -1,30 +1,36 @@
-.header {
-	padding-top: 45px;
-	border-bottom: 1px solid rgba(84, 84, 84, 0.7);
-	padding-bottom: 41px;
-	max-width: 880px;
+.header::before {
+	content: "";
 	width: 100%;
-	position: relative;
-	margin: 0 auto;
-	box-sizing: border-box;
-}
-
-.header__image {
-	width: 173px;
-	height: 33px;
-}
-
-/* @media screen and (min-width: 320px) and (max-width: 760px) and (min-width: 760px) and (max-width: 1100px) */
-
-@media screen and (max-width: 920px) {
+	height: 1px;
+	opacity: 0.7;
+	background: #545454;
+	position: absolute;
+	left: 50%;
+	transform: translateX(-50%);
+	bottom: 0;
+  }
+  
+  .header {
+	margin-top: 45px;
+  }
+  
+  .header__logo {
+	margin-bottom: 41px;
+  }
+  
+  @media screen and (max-width: 320px) {
+	.header::before {
+	  width: 320px;
+	}
+  
 	.header {
-		padding-top: 28px;
-		padding-left: 27px;
-		padding-bottom: 32px;
+	  margin-top: 28px;
 	}
-
-	.header__image {
-		width: 126px;
-		height: 24px;
+  
+	.header__logo {
+	  height: 24px;
+	  width: 126px;
+	  margin-bottom: 32px;
 	}
-}
+  }
+  
